2004-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/notation.itely: 
	* Documentation/user/introduction.itely:
	* Documentation/user/tutorial.itely: Use quote ly-option instead
	of explicit @quotation.  This fixes too long lilypond linewidths
	resulting in overful hboxes.

	* scripts/lilypond-book.py: Add ly-option: `quote'.

2004-03-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* tex/titledefs.tex: Avoid that the first score line is extra
	indented if instrument is defined but not piece.

2004-03-30  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/macros.itexi (@internalsref) [info]: Prepend
	`lilypond/' to info file name.
	(@usermanref) [info]: New variant.

	* scm/documentation-generate.scm: Fix definition of @usermanref
	and @glossaryref (in the `ifinfo' branch) by prepending `lilypond/'
	to info file name.

2004-03-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Interpretation
	contexts): rewrite introduction.

2004-03-30  Ferenc Wagner  <wferi@tba.elte.hu>

	* scm/define-markup-commands.scm: Use TeX accents instead of
	straight iso-8859-1 encoding in the doc string.

2004-03-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/tutorial.itely (A lead sheet): remove extra
	space after dotted duration.

2004-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/introduction.itely: 
	* Documentation/user/notation.itely:
	* Documentation/user/tutorial.itely: Up all relative examples.
	Enclose @lilypond displays in @quotation.  Typos and corrections.

	* Documentation/user/macros.itexi: Use fetaflat, fetasharp.

2004-03-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/music-functions.scm (make-voice-props-revert): Revert also
	MultiMeasureRest staff-position in oneVoice.

2004-03-29  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/user/changing-defaults.itely, 
	Documentation/user/lilypond.tely: few fixes. Place no comma between