@@ -126,9 +126,7 @@
   (string<? (symbol->string (car x))
 	    (symbol->string (car y))))
 
-
-
-(define (chain-assoc x alist-list)
+(define-public (chain-assoc x alist-list)
   (if (null? alist-list)
       #f
       (let* ((handle (assoc x (car alist-list))))
@@ -136,8 +134,7 @@
 	    handle
 	    (chain-assoc x (cdr alist-list))))))
 
-
-(define (chain-assoc-get x alist-list . default)
+(define-public (chain-assoc-get x alist-list . default)
   "Return ALIST entry for X. Return DEFAULT (optional, else #f) if not
 found."
 
