@@ -1,5 +1,7 @@
 2004-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* input/wilhelmus.ly: New file.
+
 	* Documentation/user/notation.itely: 
 	* Documentation/user/introduction.itely:
 	* Documentation/user/tutorial.itely: Use quote ly-option instead
